fix: 🐛 align design

--- a/utils/global.css
+++ b/utils/global.css
@@ -1,3 +1,6 @@
+body {
+  background: transparent;
+}
 ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
